# crdt-merge

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  PATENTS  README.md  SECURITY.md  TEST_RESULTS.md  app.py  conftest.py  pyproject.toml  requirements.txt  sox-compliance.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  crdt-laws.yml  deploy-spaces.yml  publish.yml  security-scan.yml  tests.yml
benchmarks/: bench_v082.py  bench_v082_results.txt
benchmarks/a100_v060/: ANALYSIS.md  crdt_merge_v060_a100_benchmark.json
benchmarks/a100_v071/: ANALYSIS.md  FULL_ANALYSIS.md  all_results.json
benchmarks/a100_v080/: ANALYSIS.md  CRDT_LAW_DIAGNOSTICS.md  all_results.json  conftest.py  crdt_law_diagnostics.json  run_benchmark.py  test_crdt_laws_granular.py
benchmarks/v081/: benchmark_results.json  run_benchmark.py
crdt_merge/: __init__.py  _polars_engine.py  agentic.py  arrow.py  async_merge.py  audit.py  clocks.py  compliance.py  core.py  dataframe.py  datasets_ext.py  dedup.py  delta.py  encryption.py  flower_plugin.py  gossip.py  json_merge.py  mergeql.py  merkle.py  observability.py  parallel.py  parquet.py  probabilistic.py  provenance.py  rbac.py  schema_evolution.py  strategies.py  streaming.py  unmerge.py  verify.py  viz.py  wire.py
crdt_merge/accelerators/: __init__.py  airbyte.py  dbt_package.py  duckdb_udf.py  ducklake.py  flight_server.py  polars_plugin.py  sqlite_ext.py  streamlit_ui.py
crdt_merge/cli/: __init__.py  _compat.py  _completions.py  _config.py  _doctor.py  _interactive.py  _output.py  _parser.py  _progress.py  _util.py  _wizard.py  cmd_accel.py  cmd_clock.py  cmd_config.py  cmd_delta.py  cmd_enterprise.py  cmd_gossip.py  cmd_hub.py  cmd_json.py  cmd_merge.py  cmd_merkle.py  cmd_migrate.py  cmd_model.py  cmd_observe.py  cmd_query.py  cmd_verify.py  cmd_wire.py  migrate.py
crdt_merge/context/: __init__.py  bloom.py  consolidator.py  manifest.py  merge.py  sidecar.py
crdt_merge/e4/: __init__.py  adaptive_verification.py  causal_trust_clock.py  compatibility.py  delta_trust_lattice.py  pco.py  projection_delta.py  proof_evidence.py  trust_bound_merkle.py  trust_weighted_strategy.py  typed_trust.py
crdt_merge/hub/: __init__.py  hf.py  model_card.py
crdt_merge/model/: __init__.py  continual.py  continual_bench.py  continual_verify.py  core.py  crdt_state.py  federated.py  formats.py  gpu.py  heatmap.py  lora.py  pipeline.py  provenance.py  safety.py
docs/: ARCHITECTURE_MAP.md  CRDT_ARCHITECTURE.md  FINAL_SOP_REPORT.md  LICENSING-FAQ.md  ORDER_DEPENDENCY.md  README.md  breaking_point_report_v020.md  e4.md  e4_integration.md  e4_resilience.md  evolution_assessment.md  stress_report_v030.md
docs/analysis/: gap_reconciliation.md
docs/api/: README.md  accelerators.md  agentic.md  arrow.md  async_merge.md  cli.md  clocks.md  context.md  core.md  dataframe.md  datasets.md  dedup.md  delta.md  gossip.md  json_merge.md  mergeql.md  merkle.md  model.md  parallel.md  parquet.md  polars_engine.md  probabilistic.md  provenance.md  schema_evolution.md  strategies.md  streaming.md  verify.md  viz.md  wire.md
docs/api-reference/: README.md  mergeql-bnf.md
docs/architecture/: DATA_FLOW.md  DEPENDENCY_GRAPH.md  DESIGN_DECISIONS.md  LAYER_MAP.md  OVERVIEW.md
docs/audit/: docs_audit_report.md  docs_audit_results.json
docs/benchmarks/: v030_a100_analysis.md  v030_a100_results.json  v040_a100_results.json  v050_a100_results.json
docs/competitive/: competitive_benchmark_2026.md  market_analysis_2026.md  modelcrdt_gap_analysis_2026.md
docs/cookbook/: README.md  accelerators.md  agent-state.md  basic-merging.md  distributed-sync.md  e4-cryptographic-hardening.md  enterprise-patterns.md  model-merging.md  strategy-selection.md  streaming-merges.md
docs/cookbooks/: e4-agent-memory-trust.md  e4-federated-trust.md  e4-trust-quickstart.md
docs/development/: CHANGELOG.md  CONTRIBUTING.md  MASTER_KEY_v050.md  ROADMAP.md  TESTING.md  shadow-dependencies.md  v060_development_plan.md  v070_development_plan.md  v080_development_plan.md  v090_development_plan.md  v0911_development_plan.md  v091_development_plan.md  v092_development_plan.md
docs/e4/: 0.9.5-architectural-analysis.md  E4-API-REFERENCE.md  E4-CHANGELOG.md  E4-COMPUTATIONAL-EVIDENCE.md  E4-DEVELOPER-GUIDE.md  E4-INTEGRATION-GUIDE.md  E4-MASTER-ARCHITECTURE.md  E4-PEER-REVIEW-ANALYSIS.md  E4-PEER-REVIEW-EVALUATION.md  E4-SECURITY-MODEL.md  README.md
notebooks/: crdt_merge_stress_a100.ipynb  crdt_merge_v040_a100.ipynb  crdt_merge_v050_a100.ipynb  crdt_merge_v071_a100_stress_test.ipynb  crdt_merge_v071_sandbox_benchmark.ipynb  crdt_merge_v081_benchmark.ipynb  crdt_merge_v082_a100_benchmarks.ipynb  v060_a100_stress_test.ipynb  v060_benchmark.ipynb  v060_comprehensive_benchmark.ipynb  v060_sandbox_stress_test.ipynb
paper/: CRDT_Merge_ArXiv.tex  README.md  references.bib
research/: crdt_solutions_results.json  crdt_solutions_rnd.py
security/: .bandit.yml  SECURITY.md
tests/: __init__.py  pbt_encryption.py  pbt_float_edge_cases.py  pbt_gossip_merkle.py  pbt_model_strategies.py  pbt_rbac_audit.py  pbt_schema_evolution.py  pbt_wire_all_types.py  test_accelerator_airbyte.py  test_accelerator_dbt.py  test_accelerator_dbt_macro.py  test_accelerator_duckdb.py  test_accelerator_duckdb_udf.py  test_accelerator_ducklake.py  test_accelerator_flight.py  test_accelerator_polars.py  test_accelerator_polars_plugin.py  test_accelerator_sqlite.py  test_accelerator_sqlite_ext.py  test_accelerator_streamlit.py  test_agentic.py  test_architect_360_validation.py  test_arrow.py  test_async_merge.py  test_audit.py  test_benchmark.py  test_cli_clock.py  test_cli_completions.py  test_cli_config.py  test_cli_delta.py  test_cli_enterprise.py  test_cli_gossip.py  test_cli_hub.py  test_cli_json.py  test_cli_merge.py  test_cli_merkle.py  test_cli_migrate.py  test_cli_model.py  test_cli_observe.py  test_cli_output.py  (+73 more)
(+293 files in other folders)
