[build-system]
requires = ["setuptools>=68,<83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crdt-merge"
version = "0.9.6"
description = "Mathematically proven conflict-free merge for AI model weights, datasets, and agent memory with recursive trust-delta entanglement. Zero dependencies. Patent protected."
readme = "README.md"
license = {text = "BUSL-1.1"}
requires-python = ">=3.9"
authors = [{name = "Ryan Gillespie", email = "rgillespie83@icloud.com"}]
keywords = [
    "trust", "byzantine", "entanglement", "delta-state",
    "crdt", "merge", "model-merging", "llm", "neural-network",
    "conflict-free", "deterministic", "federated-learning",
    "huggingface", "safetensors", "agent-memory", "datasets",
    "streaming", "distributed-systems", "dedup", "dataframe",
]
classifiers = [
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Zero deps core. Optional accelerators for heavy workloads:
fast = ["polars>=0.19", "orjson>=3.9", "xxhash>=3.0"]
pandas = ["pandas>=1.5"]
polars = ["polars>=0.19"]
datasets = ["datasets>=2.0"]
model = ["numpy>=1.21"]
gpu = ["torch>=2.0"]
all = ["pandas>=1.5", "polars>=0.19", "datasets>=2.0", "orjson>=3.9", "xxhash>=3.0", "numpy>=1.21", "cryptography>=41", "flwr>=1.5"]
dev = ["pytest>=7", "hypothesis>=6.80", "pytest-asyncio>=0.21"]
crypto = ["cryptography>=41"]
security = ["cryptography>=41", "oqs-python>=0.10"]
flower = ["flwr>=1.5"]
cli = ["rich>=13.0"]

[project.scripts]
crdt-merge = "crdt_merge.cli:main"

[project.urls]
Homepage = "https://github.com/mgillr/crdt-merge"
Repository = "https://github.com/mgillr/crdt-merge"
Issues = "https://github.com/mgillr/crdt-merge/issues"
Documentation = "https://github.com/mgillr/crdt-merge#readme"
Changelog = "https://github.com/mgillr/crdt-merge/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
pythonpath = ["tests/e4"]
importmode = "importlib"
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["crdt_merge*"]
